fix: changed duplicate of service account

--- a/enviroments/utils/service-account.yaml
+++ b/enviroments/utils/service-account.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
     name: default
-    namespace: backend-dev
+    namespace: frontend-dev
 imagePullSecrets:
     - name: aws-ecr-auth
 ---
