fix: added namesace to imageAutomation

--- a/enviroments/utils/image-automation.yaml
+++ b/enviroments/utils/image-automation.yaml
@@ -3,6 +3,7 @@ kind: ImageRepository
 namespace: flux-system
 metadata:
   name: web
+  namespace: flux-system
 spec:
   secretRef:
     name: aws-ecr-auth
