fix: added pull secret to image automation

--- a/enviroments/utils/image-automation.yaml
+++ b/enviroments/utils/image-automation.yaml
@@ -4,6 +4,8 @@ metadata:
   name: web
   namespace: flux-system
 spec:
+  secretRef:
+    name: aws-ecr-auth
   image: 724605596975.dkr.ecr.us-east-1.amazonaws.com/web
   interval: 1m0s
 ---
