fix: changed configuration of image automation

--- a/enviroments/utils/image-automation.yaml
+++ b/enviroments/utils/image-automation.yaml
@@ -3,9 +3,9 @@ kind: ImageRepository
 metadata:
   name: web
   namespace: flux-system
+imagePullSecrets:
+    - name: aws-ecr-auth
 spec:
-  secretRef:
-    name: aws-ecr-auth
   image: 724605596975.dkr.ecr.us-east-1.amazonaws.com/web
   interval: 1m0s
 ---
