--- a/enviroments/utils/service-account.yaml
+++ b/enviroments/utils/service-account.yaml
@@ -13,3 +13,11 @@ metadata:
   namespace: backend-dev
 imagePullSecrets:
     - name: aws-ecr-auth
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: default
+  namespace: flux-system
+imagePullSecrets:
+    - name: aws-ecr-auth
