--- a/enviroments/develop/frontend/webui/deployment.yaml
+++ b/enviroments/develop/frontend/webui/deployment.yaml
@@ -14,17 +14,17 @@ spec:
       labels:
         app: web
     spec:
-      volumes:
-      - name: nginx-config
-        configMap:
-          name: nginx-config
+      # volumes:
+      # - name: nginx-config
+      #   configMap:
+      #     name: nginx-config
       containers:
       - name: web
         image: 724605596975.dkr.ecr.us-east-1.amazonaws.com/web:0.3.0 # {"$imagepolicy": "flux-system:web"}
-        volumeMounts:
-        - name: nginx-config
-          mountPath: /etc/nginx/nginx.conf
-          subPath: nginx.conf
+        # volumeMounts:
+        # - name: nginx-config
+        #   mountPath: /etc/nginx/nginx.conf
+        #   subPath: nginx.conf
         imagePullPolicy: Always
         resources:
           limits:
