--- a/enviroments/develop/frontend/webui/ingress/nginx-config.yaml
+++ b/enviroments/develop/frontend/webui/ingress/nginx-config.yaml
@@ -15,6 +15,9 @@ data:
           try_files $uri $uri/ /index.html;
           index  index.html index.htm;
         }
+        location app/api/server {
+          proxy_pass http://10.0.3.17;
+        }
         location = /50x.html {
           root   /usr/share/nginx/html;
         }
